--- a/style.css
+++ b/style.css
@@ -2,43 +2,130 @@
 @tailwind components;
 @tailwind utilities;
 
-.btn {
-  padding: 16px 50px;
-  border-radius: 12px;
-  background: #009379;
-  align-items: center;
-  justify-content: center;
-  display: block;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+  background: #0f041c;
+}
+.experiance {
+  background: url(./images/bg-fon\ hero.png) no-repeat;
+}
+.container {
+  max-width: 1420px;
+  width: 100%;
+  display: flex;
   margin: auto;
-  color: #fff;
-  font-weight: 600;
-  
+}
+.list {
+  @apply tablet:flex gap-6 text-[#ffffff80] items-center pt-[10px];
+}
+
+.burger-menu {
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 24px;
+  cursor: pointer;
+}
+
+.burger-menu span {
+  display: block;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 2px;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn {
+  padding: 16px 24px;
+  color: #ffffff;
+  background: #0f041c;
+  width: 185px;
+  border-radius: 4px;
+  margin-top: 40px;
+  border: 1px solid #2c2436;
 }
 
 .btn:hover {
-  background: #e5f4f2;
-  color: #009379;
-  transition-duration: 0.5s;
+  background: #3ddeed;
+  color: #182627;
 }
- .secondary__btn {
+
+.creator__btn {
+  color: #3ddeed;
+  font-weight: 500;
+  font-size: 18px;
+  width: 250px;
+}
+
+.sotcial__icons {
+  width: 44px;
+  height: 44px;
+  padding-left: 14px;
+  padding-top: 9px;
+  border: 1px solid #ffffff21;
+  border-radius: 4px;
+}
+
+.experiance__foto__underline:hover {
+  height: 4px;
+  background: linear-gradient(
+    to right,
+    red,
+    orange,
+    yellow,
+    green,
+    blue,
+    purple
+  );
+  width: 100%;
+  margin: 4px 0;
+}
+.faq__item:hover .faq__answer {
   display: block;
-  margin: auto;
-  background: #e5f4f2;
-  color: #009379;
-  margin-bottom: 30px;
-  margin-top: 30px;
-  
- }
-  .secondary__btn:hover {
-    background:  #009379;
-    color: #fff;
-    transition-duration: 0.5s;
-  }
- 
-  .werapper {
+}
+
+.faq__item:hover .faq__toogle {
+  transform: rotate(180deg);
+  fill: #ed3dd8;
+}
+.afisha__card {
+  width: 300px;
+  height: 330px;
+  flex: 0 0 auto;
+  border: 1px inherit;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.afisha__card:hover {
+  border: 4px solid #00e5ff;
+}
+
+.footer__info {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr; 
+  gap: 10px; 
+}
+
+
+
+
+
+
+
+
+
+
+@media {
+  .faq__item:hover .faq__answer {
     display: flex;
-    margin: auto;
-    gap: 30px;
-    justify-content: center;
-    align-items: center;
   }
+}
